--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <meta property="og:description" content="Естественная красота каждый день." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/icons/mira.svg" />
-  </head>
+    <link rel="icon" href="/icons/mira.png" type="image/png">
+  <link rel="apple-touch-icon" href="/icons/mira.png" sizes="180x180">
+</head>
   <body class="min-h-screen bg-white text-slate-900">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
