--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <meta property="og:image" content="/icons/mira.svg" />
     <link rel="icon" href="/icons/mira.png" type="image/png">
   <link rel="apple-touch-icon" href="/icons/mira.png" sizes="180x180">
+  <link rel="preconnect" href="https://js.stripe.com">
+  <link rel="preconnect" href="https://checkout.stripe.com">
+  <link rel="dns-prefetch" href="https://js.stripe.com">
+  <link rel="dns-prefetch" href="https://checkout.stripe.com">
+  <link rel="dns-prefetch" href="https://api.stripe.com">
+  <link rel="dns-prefetch" href="https://supabase.co">
 </head>
   <body class="min-h-screen bg-white text-slate-900">
     <div id="root"></div>
